# Exercicio1-OpenGL

./: .gitignore  CMakeLists.txt  ImportadorBmp.cpp  ImportadorBmp.h  main.cpp
